# f1tenth_gym

./: .gitignore  .readthedocs.yml  CMakeLists.txt  Dockerfile  DockerfileUI  LICENSE  Pipfile  README.md  build_docker_ui.sh  docker-compose.yml  docker.sh  docker_ui.sh  docker_ui_nvidia_docker_1.0.sh  docker_ui_nvidia_docker_2.0.sh  map4.pgm  map4.yaml  notes.txt  pyproject.toml  pytest.ini  requirements.txt  scratch.py  setup.cfg  setup.py  sim_requests.proto
.github/workflows/: ci.yml  docker.yml  lint.yml
colab/: F1TenthGym.ipynb  F1TenthGymRL.ipynb
docs/: Makefile  api.rst  basic_usage.rst  conf.py  customized_usage.rst  index.rst  installation.rst  requirements.txt
docs/api/: base_classes.rst  collision_models.rst  dynamic_models.rst  env.rst  laser_models.rst
docs/html/: annotated.html  classes.html  classf110__gym_1_1envs_1_1base__classes_1_1_race_car-members.html  classf110__gym_1_1envs_1_1base__classes_1_1_race_car.html  classf110__gym_1_1envs_1_1base__classes_1_1_simulator-members.html  classf110__gym_1_1envs_1_1base__classes_1_1_simulator.html  classf110__gym_1_1envs_1_1collision__models_1_1_collision_tests-members.html  classf110__gym_1_1envs_1_1collision__models_1_1_collision_tests.html  classf110__gym_1_1envs_1_1dynamic__models_1_1_dynamics_test-members.html  classf110__gym_1_1envs_1_1dynamic__models_1_1_dynamics_test.html  classf110__gym_1_1envs_1_1f110__env_1_1_f110_env-members.html  classf110__gym_1_1envs_1_1f110__env_1_1_f110_env.html  classf110__gym_1_1envs_1_1f110__env__backup_1_1_f110_env-members.html  classf110__gym_1_1envs_1_1f110__env__backup_1_1_f110_env.html  classf110__gym_1_1envs_1_1laser__models_1_1_scan_simulator2_d-members.html  classf110__gym_1_1envs_1_1laser__models_1_1_scan_simulator2_d.html  classf110__gym_1_1envs_1_1laser__models_1_1_scan_tests-members.html  classf110__gym_1_1envs_1_1laser__models_1_1_scan_tests.html  classf110__gym_1_1unittest_1_1collision__checks_1_1_collision_tests-members.html  classf110__gym_1_1unittest_1_1collision__checks_1_1_collision_tests.html  classf110__gym_1_1unittest_1_1dynamics__test_1_1_dynamics_test-members.html  classf110__gym_1_1unittest_1_1dynamics__test_1_1_dynamics_test.html  classf110__gym_1_1unittest_1_1scan__sim_1_1_scan_simulator2_d-members.html  classf110__gym_1_1unittest_1_1scan__sim_1_1_scan_simulator2_d.html  classf110__gym_1_1unittest_1_1scan__sim_1_1_scan_tests-members.html  classf110__gym_1_1unittest_1_1scan__sim_1_1_scan_tests.html  dir_0d9aa0052a6017cb7aea189bf393af42.html  dir_70fc25f479e8e19f7e6bd12b95eca2dc.html  dir_87aab0849a7ff80b67f27d7f0ecafd88.html  dir_cc06cd2fc16f827f09405fcedd02c7bb.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js
docs/src/: conf.py  index.rst
docs/xml/: base__classes_8py.xml  classf110__gym_1_1envs_1_1base__classes_1_1_race_car.xml  classf110__gym_1_1envs_1_1base__classes_1_1_simulator.xml  classf110__gym_1_1envs_1_1collision__models_1_1_collision_tests.xml  classf110__gym_1_1envs_1_1dynamic__models_1_1_dynamics_test.xml  classf110__gym_1_1envs_1_1f110__env_1_1_f110_env.xml  classf110__gym_1_1envs_1_1f110__env__backup_1_1_f110_env.xml  classf110__gym_1_1envs_1_1laser__models_1_1_scan_simulator2_d.xml  classf110__gym_1_1envs_1_1laser__models_1_1_scan_tests.xml  classf110__gym_1_1unittest_1_1collision__checks_1_1_collision_tests.xml  classf110__gym_1_1unittest_1_1dynamics__test_1_1_dynamics_test.xml  classf110__gym_1_1unittest_1_1scan__sim_1_1_scan_simulator2_d.xml  classf110__gym_1_1unittest_1_1scan__sim_1_1_scan_tests.xml  collision__checks_8py.xml  collision__models_8py.xml  dir_0d9aa0052a6017cb7aea189bf393af42.xml  dir_70fc25f479e8e19f7e6bd12b95eca2dc.xml  dir_87aab0849a7ff80b67f27d7f0ecafd88.xml  dir_cc06cd2fc16f827f09405fcedd02c7bb.xml  dynamic__models_8py.xml  dynamics__test_8py.xml  f110__env_8py.xml  f110__env__backup_8py.xml  index.xml  laser__models_8py.xml  legacy__scan__gen_8py.xml  namespacef110__gym.xml  namespacef110__gym_1_1envs.xml  namespacef110__gym_1_1envs_1_1base__classes.xml  namespacef110__gym_1_1envs_1_1collision__models.xml  namespacef110__gym_1_1envs_1_1dynamic__models.xml  namespacef110__gym_1_1envs_1_1f110__env.xml  namespacef110__gym_1_1envs_1_1f110__env__backup.xml  namespacef110__gym_1_1envs_1_1laser__models.xml  namespacef110__gym_1_1unittest.xml  namespacef110__gym_1_1unittest_1_1collision__checks.xml  namespacef110__gym_1_1unittest_1_1dynamics__test.xml  namespacef110__gym_1_1unittest_1_1legacy__scan__gen.xml  (+7 more)
examples/: car.py  car_controller.py  config_example_map.yaml  create_edt.py  data_ana.ipynb  dqn.py  example_custom_reward.py  final_q_table.pkl  ftg_planner.py  globals.py  lidar.py  lidar_example.py  line_alg.py  mppi_model.py  ppo_example.py  q_table.pkl  qlearning.py  random_trackgen.py  run_in_empty_track.py  test.py  test_pyqtopengl.py  track.py  util.py  video_recording.py  waypoint_follow.py
f1tenth_gym/: __init__.py
gym/: README.md  setup.py  sim_requests_pb2.py
include/: ackermann_kinematics.hpp  car_obs.hpp  car_odom.hpp  car_params.hpp  car_state.hpp  distance_transform.hpp  gjk.hpp  ks_kinematics.hpp  pose_2d.hpp  racecar.hpp  scan_simulator_2d.hpp  simulator.hpp  st_kinematics.hpp
maps/: berlin.csv  columbia.csv  columbia.yaml  curve.csv  curve.yaml  mtl.csv  mtl.yaml  skirk.csv
src/: ackermann_kinematics.cpp  distance_transform.cpp  gjk.cpp  ks_kinematics.cpp  main.py  racecar.cpp  scan_simulator_2d.cpp  sim_server.cpp  simulator.cpp  st_kinematics.cpp
tests/: collision_checks_test.py  dynamics_test.py  gym_api_test.py  legacy_scan.npz  legacy_scan_gen.py  pyglet_test_.py  pyglet_test_camera.py  random_trackgen.py  scan_sim_test.py  test_collision_checks.py  test_cubic_spline.py  test_dynamics.py  test_f110_env.py  test_frenet_utils.py  test_observation.py  test_renderer.py  test_scan_sim.py  test_track.py  test_utils.py
weap_util/: setup.py
work/: csv2tboard.py  environment.yml  eval.py  example.py  examples.code-workspace  keyboard_control.py  lidar_test.py  map_test.py  mp_trial.py  reward.py  tb_trial.py  test.py  train.py  utils.py
(+180 files in other folders)
