[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra"
testpaths =[
    "tests",
    "integration",
]

[tool.poetry]
name = "f1tenth_gym"
version = "1.0.0dev"
description = "Gym environment for F1TENTH"
license = "MIT"
authors = [
    "Hongrui Zheng",
    "Renukanandan Tumu",
    "Luigi Berducci",
    "Ahmad Amine",
    "Joseph Auckley",
    "Matthew O'Kelly",
    "Aman Sinha"
]
maintainers = [
    "Hongrui Zheng",
]
readme = "README.md"
homepage = "https://f1tenth.org"
repository = "https://github.com/f1tenth/f1tenth_gym"
documentation = "https://f1tenth-gym.readthedocs.io/en/latest/"
packages = [
    {include = "f1tenth_gym"},
]

[tool.poetry.dependencies]
python = ">=3.9"
gymnasium = "^0.29.1"
numpy = ">=1.18"
pillow = ">=9.0.1"
scipy = ">=1.7.3"
numba = ">=0.55.2"
PyYAML = ">=5.3.1"
PyOpenGL = "==3.1.9"
PyOpenGL-accelerate = "==3.1.9"
# pygame = "^2.5.2"
opencv-python = "^4.9.0.80"
yamldataclassconfig = "^1.5.0"
requests = "^2.31.0"
# shapely = "^2.0.2"
pyqtgraph = "^0.13.7"
PyQt6 = "==6.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
ipykernel = "^6.29.0"
isort = "^5.13.2"
autoflake = "^2.2.1"
matplotlib = "^3.8.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
